--- a/package.json
+++ b/package.json
@@ -91,7 +91,9 @@
   "devDependencies": {
     "@types/react-router": "^5.1.18",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.23"
+    "@types/styled-components": "^5.1.23",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo-loader": "^3.0.0"
   },
   "jest": {
     "roots": [
