--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://million1998.github.io/React-jizhang-website/",
   "name": "react-jizhang",
   "version": "0.1.0",
   "private": true,
